--- a/pom.xml
+++ b/pom.xml
@@ -59,8 +59,18 @@
         <scope>provided</scope>
     </dependency>
 
+  <!-- Matrixes and operations -->
+    <dependency>
+      <groupId>org.la4j</groupId>
+      <artifactId>la4j</artifactId>
+      <version>0.6.0</version>
+    </dependency>
 
-
+    <dependency>
+        <groupId>com.github.jtidy</groupId>
+        <artifactId>jtidy</artifactId>
+        <version>1.0.5</version>
+    </dependency>
 
   </dependencies>
 
